fix(stacked): stretch tables to fill questions column

--- a/Content/Styles/Stack/Site.scss
+++ b/Content/Styles/Stack/Site.scss
@@ -92,14 +92,11 @@ $hamburger: '\f0c9';
   width: 60%;
   @extend %passage-question-shared;
 }
-
-.answerContainer {
-    margin: 50px;
-  }
   
-  .tableItem{
+.tableItem {
     border:3px solid black;
-  }
+}
+
 .center {
   align-items: center;
   justify-content: center;
